# lakonik

./: Cargo.toml  README.md  start-nvim-lsp-client.sh
.github/workflows/: main.yaml
src/: engine.rs  main.rs  parser.rs  verbs.rs
src/ast/: mod.rs  parser.rs  utils.rs
src/hir/: mod.rs  part.rs  sentence.rs  utils.rs  verb.rs  vocative.rs
src/lsp/: completion.rs  mod.rs  utils.rs
src/parser/: mod.rs  parser.rs  primitives.rs  utils.rs
src/snapshots/: lakonik__engine__tests__parse_statement_snapshot@qwen3_create_$(expr_5_-_3).snap  lakonik__engine__tests__parse_statement_snapshot@qwen3_create_bar_$(expr_2_+_3).snap  lakonik__engine__tests__parse_statement_snapshot@robot_~testverbdeleteme1=(test_template_delete_me:_)_$(expr_5_-_3).snap  lakonik__engine__tests__parse_statement_snapshot@robot_~testverbdeleteme2_=_(hello).snap  lakonik__parser__tests__parse_statement_snapshot@alice42_jump.snap  lakonik__parser__tests__parse_statement_snapshot@bob123_fly.snap  lakonik__parser__tests__parse_statement_snapshot@john-_run.snap  lakonik__parser__tests__parse_statement_snapshot@john-doe123_run-fast.snap  lakonik__parser__tests__parse_statement_snapshot@john_run.snap  lakonik__parser__tests__parse_statement_snapshot@my-name_jump-fast.snap  lakonik__parser__tests__parse_statement_snapshot@qwen3_create_$(__tree_.).snap  lakonik__parser__tests__parse_statement_snapshot@qwen3_create_$(tree_.).snap  lakonik__parser__tests__parse_statement_snapshot@qwen3_create_@hello.txt.snap  lakonik__parser__tests__parse_statement_snapshot@qwen3_delete_@hello.txt.snap  lakonik__parser__tests__parse_statement_snapshot@qwen3_delete_bar_$(git_diff).snap  (+6 more)
src/templates/: mod.rs
templates/: create
verbs/: create
(+59 files in other folders)
