[package]
name = "lakonik"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dirs = "5.0.1"
duct = "1.0.0"
include_dir = { version = "0.7.4", features = ["glob"] }
minijinja = { version = "2.10.2", features = ["loader"] }
nom = "8.0.0"
nom_locate = "5.0.0"
rig-core = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.10.1"
tokio = { version = "1.45.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
rstest = "0.25.0"
